[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/MeshLibrary/MeshLibrary.tres" type="MeshLibrary" id=1]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Main/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/PropagationMeshLibrary/PropagationMeshLibrary.tres" type="MeshLibrary" id=4]
[ext_resource path="res://scenes/Main/coin.ogg" type="AudioStream" id=5]

[node name="Main" type="Spatial"]
script = ExtResource( 3 )
stream = ExtResource( 5 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 1, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 65524, 0, 0, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 1, 65535, 0, 1, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 0, 12, 1, 0, 65524, 1, 0, 65525, 1, 1, 65526, 1, 1, 65527, 1, 1, 65528, 1, 1, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 1, 65535, 1, 1, 0, 2, 1, 1, 2, 1, 2, 2, 1, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 1, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 1, 11, 2, 0, 12, 2, 0, 65524, 2, 0, 65525, 2, 0, 65526, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 1, 65535, 2, 1, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 1, 7, 3, 1, 8, 3, 1, 9, 3, 1, 10, 3, 1, 11, 3, 0, 12, 3, 0, 65524, 3, 0, 65525, 3, 0, 65526, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 1, 0, 4, 1, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 1, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 65524, 4, 0, 65525, 4, 0, 65526, 4, 0, 65527, 4, 0, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 1, 65535, 4, 1, 0, 5, 1, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 1, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 65524, 5, 0, 65525, 5, 0, 65526, 5, 0, 65527, 5, 0, 65528, 5, 0, 65529, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 1, 65535, 5, 1, 0, 6, 1, 1, 6, 1, 2, 6, 1, 3, 6, 1, 4, 6, 1, 5, 6, 1, 6, 6, 1, 7, 6, 1, 8, 6, 1, 9, 6, 1, 10, 6, 0, 11, 6, 0, 12, 6, 0, 65524, 6, 0, 65525, 6, 0, 65526, 6, 1, 65527, 6, 1, 65528, 6, 1, 65529, 6, 1, 65530, 6, 1, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 1, 65535, 6, 1, 0, 7, 1, 1, 7, 0, 2, 7, 1, 3, 7, 1, 4, 7, 1, 5, 7, 1, 6, 7, 1, 7, 7, 1, 8, 7, 1, 9, 7, 1, 10, 7, 0, 11, 7, 0, 12, 7, 0, 65524, 7, 0, 65525, 7, 0, 65526, 7, 1, 65527, 7, 0, 65528, 7, 1, 65529, 7, 0, 65530, 7, 1, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 1, 65535, 7, 1, 0, 8, 1, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 65524, 8, 0, 65525, 8, 0, 65526, 8, 1, 65527, 8, 1, 65528, 8, 0, 65529, 8, 1, 65530, 8, 1, 65531, 8, 1, 65532, 8, 1, 65533, 8, 1, 65534, 8, 1, 65535, 8, 1, 0, 9, 1, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 65524, 9, 0, 65525, 9, 0, 65526, 9, 1, 65527, 9, 1, 65528, 9, 1, 65529, 9, 1, 65530, 9, 1, 65531, 9, 0, 65532, 9, 0, 65533, 9, 0, 65534, 9, 1, 65535, 9, 1, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 65524, 10, 0, 65525, 10, 0, 65526, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 11, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 8, 11, 0, 9, 11, 0, 10, 11, 0, 11, 11, 0, 12, 11, 0, 65524, 11, 0, 65525, 11, 0, 65526, 11, 0, 65527, 11, 0, 65528, 11, 0, 65529, 11, 0, 65530, 11, 0, 65531, 11, 0, 65532, 11, 0, 65533, 11, 0, 65534, 11, 0, 65535, 11, 0, 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 12, 0, 9, 12, 0, 10, 12, 0, 11, 12, 0, 12, 12, 0, 65524, 12, 0, 65525, 12, 0, 65526, 12, 0, 65527, 12, 0, 65528, 12, 0, 65529, 12, 0, 65530, 12, 0, 65531, 12, 0, 65532, 12, 0, 65533, 12, 0, 65534, 12, 0, 65535, 12, 0, 0, 65523, 0, 1, 65523, 0, 2, 65523, 0, 3, 65523, 0, 4, 65523, 0, 5, 65523, 0, 6, 65523, 0, 7, 65523, 0, 8, 65523, 0, 9, 65523, 0, 10, 65523, 0, 11, 65523, 0, 12, 65523, 0, 65524, 65523, 0, 65525, 65523, 0, 65526, 65523, 0, 65527, 65523, 0, 65528, 65523, 0, 65529, 65523, 0, 65530, 65523, 0, 65531, 65523, 0, 65532, 65523, 0, 65533, 65523, 0, 65534, 65523, 0, 65535, 65523, 0, 0, 65524, 0, 1, 65524, 0, 2, 65524, 0, 3, 65524, 0, 4, 65524, 0, 5, 65524, 1, 6, 65524, 1, 7, 65524, 1, 8, 65524, 1, 9, 65524, 1, 10, 65524, 0, 11, 65524, 0, 12, 65524, 0, 65524, 65524, 0, 65525, 65524, 1, 65526, 65524, 1, 65527, 65524, 1, 65528, 65524, 1, 65529, 65524, 1, 65530, 65524, 1, 65531, 65524, 1, 65532, 65524, 1, 65533, 65524, 0, 65534, 65524, 0, 65535, 65524, 0, 0, 65525, 1, 1, 65525, 1, 2, 65525, 0, 3, 65525, 0, 4, 65525, 0, 5, 65525, 1, 6, 65525, 1, 7, 65525, 1, 8, 65525, 1, 9, 65525, 1, 10, 65525, 0, 11, 65525, 0, 12, 65525, 0, 65524, 65525, 0, 65525, 65525, 1, 65526, 65525, 0, 65527, 65525, 0, 65528, 65525, 1, 65529, 65525, 1, 65530, 65525, 1, 65531, 65525, 1, 65532, 65525, 1, 65533, 65525, 1, 65534, 65525, 1, 65535, 65525, 1, 0, 65526, 1, 1, 65526, 1, 2, 65526, 0, 3, 65526, 0, 4, 65526, 0, 5, 65526, 1, 6, 65526, 1, 7, 65526, 1, 8, 65526, 1, 9, 65526, 1, 10, 65526, 0, 11, 65526, 0, 12, 65526, 0, 65524, 65526, 0, 65525, 65526, 1, 65526, 65526, 1, 65527, 65526, 1, 65528, 65526, 1, 65529, 65526, 1, 65530, 65526, 1, 65531, 65526, 1, 65532, 65526, 0, 65533, 65526, 0, 65534, 65526, 1, 65535, 65526, 1, 0, 65527, 1, 1, 65527, 1, 2, 65527, 1, 3, 65527, 1, 4, 65527, 1, 5, 65527, 1, 6, 65527, 1, 7, 65527, 1, 8, 65527, 1, 9, 65527, 1, 10, 65527, 0, 11, 65527, 0, 12, 65527, 0, 65524, 65527, 0, 65525, 65527, 0, 65526, 65527, 1, 65527, 65527, 1, 65528, 65527, 1, 65529, 65527, 0, 65530, 65527, 0, 65531, 65527, 0, 65532, 65527, 0, 65533, 65527, 0, 65534, 65527, 1, 65535, 65527, 1, 0, 65528, 1, 1, 65528, 1, 2, 65528, 0, 3, 65528, 0, 4, 65528, 0, 5, 65528, 1, 6, 65528, 1, 7, 65528, 1, 8, 65528, 1, 9, 65528, 1, 10, 65528, 0, 11, 65528, 0, 12, 65528, 0, 65524, 65528, 0, 65525, 65528, 0, 65526, 65528, 1, 65527, 65528, 1, 65528, 65528, 1, 65529, 65528, 0, 65530, 65528, 1, 65531, 65528, 1, 65532, 65528, 1, 65533, 65528, 1, 65534, 65528, 1, 65535, 65528, 1, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 1, 6, 65529, 1, 7, 65529, 1, 8, 65529, 1, 9, 65529, 1, 10, 65529, 0, 11, 65529, 0, 12, 65529, 0, 65524, 65529, 0, 65525, 65529, 0, 65526, 65529, 1, 65527, 65529, 0, 65528, 65529, 0, 65529, 65529, 0, 65530, 65529, 1, 65531, 65529, 1, 65532, 65529, 1, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 1, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 4, 65530, 0, 5, 65530, 1, 6, 65530, 0, 7, 65530, 0, 8, 65530, 1, 9, 65530, 1, 10, 65530, 0, 11, 65530, 0, 12, 65530, 0, 65524, 65530, 0, 65525, 65530, 0, 65526, 65530, 1, 65527, 65530, 0, 65528, 65530, 0, 65529, 65530, 0, 65530, 65530, 1, 65531, 65530, 1, 65532, 65530, 1, 65533, 65530, 0, 65534, 65530, 0, 65535, 65530, 1, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 1, 6, 65531, 0, 7, 65531, 0, 8, 65531, 1, 9, 65531, 1, 10, 65531, 0, 11, 65531, 0, 12, 65531, 0, 65524, 65531, 0, 65525, 65531, 0, 65526, 65531, 1, 65527, 65531, 1, 65528, 65531, 0, 65529, 65531, 0, 65530, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 1, 0, 65532, 1, 1, 65532, 1, 2, 65532, 0, 3, 65532, 0, 4, 65532, 0, 5, 65532, 1, 6, 65532, 1, 7, 65532, 1, 8, 65532, 1, 9, 65532, 1, 10, 65532, 0, 11, 65532, 0, 12, 65532, 0, 65524, 65532, 0, 65525, 65532, 0, 65526, 65532, 1, 65527, 65532, 1, 65528, 65532, 0, 65529, 65532, 0, 65530, 65532, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 1, 0, 65533, 1, 1, 65533, 1, 2, 65533, 1, 3, 65533, 0, 4, 65533, 0, 5, 65533, 1, 6, 65533, 1, 7, 65533, 1, 8, 65533, 1, 9, 65533, 1, 10, 65533, 0, 11, 65533, 0, 12, 65533, 0, 65524, 65533, 0, 65525, 65533, 0, 65526, 65533, 1, 65527, 65533, 1, 65528, 65533, 1, 65529, 65533, 1, 65530, 65533, 1, 65531, 65533, 1, 65532, 65533, 1, 65533, 65533, 1, 65534, 65533, 1, 65535, 65533, 1, 0, 65534, 1, 1, 65534, 1, 2, 65534, 1, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 6, 65534, 0, 7, 65534, 0, 8, 65534, 1, 9, 65534, 0, 10, 65534, 0, 11, 65534, 0, 12, 65534, 0, 65524, 65534, 0, 65525, 65534, 1, 65526, 65534, 1, 65527, 65534, 1, 65528, 65534, 1, 65529, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65532, 65534, 0, 65533, 65534, 1, 65534, 65534, 1, 65535, 65534, 1, 0, 65535, 1, 1, 65535, 1, 2, 65535, 1, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 6, 65535, 0, 7, 65535, 0, 8, 65535, 1, 9, 65535, 0, 10, 65535, 0, 11, 65535, 0, 12, 65535, 0, 65524, 65535, 0, 65525, 65535, 1, 65526, 65535, 1, 65527, 65535, 1, 65528, 65535, 1, 65529, 65535, 0, 65530, 65535, 0, 65531, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 1, 65535, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="PropagationMap" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MapCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0 )
projection = 1
size = 55.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -150.0
margin_right = 496.0
margin_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer"]
margin_top = 10.0
margin_right = 960.0
margin_bottom = 24.0
text = "Sound Propagation Demo by Tianmaru"
align = 1
valign = 1

[node name="Description" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer"]
margin_top = 40.0
margin_right = 960.0
margin_bottom = 71.0
text = "This demo presents a way to achieve more realistic sound propagation on a GridMap. This implementation was used by me in an audio-only horror game, where you have to navigate through a maze by ear."
autowrap = true

[node name="Instructions" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer"]
margin_top = 87.0
margin_right = 960.0
margin_bottom = 118.0
text = "Click on the map to spawn a sound, which will propagate across the grid map without passing walls. For more information, please checkout the SoundPropagator class."
autowrap = true

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/InfoPanel/VBoxContainer"]
margin_top = 134.0
margin_right = 960.0
margin_bottom = 222.0
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_right = 478.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Move:"

[node name="Label2" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "WASD"

[node name="Label3" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 478.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Open Map:"

[node name="Label4" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_left = 482.0
margin_top = 18.0
margin_right = 960.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Tab or Right Mouse Button"

[node name="Label5" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 478.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Spawn Sound:"

[node name="Label6" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_left = 482.0
margin_top = 36.0
margin_right = 960.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Left Mouse Button"

[node name="Label7" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 478.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Menu:"

[node name="Label8" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_left = 482.0
margin_top = 54.0
margin_right = 960.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Escape"

[node name="Label9" type="Label" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_top = 73.0
margin_right = 478.0
margin_bottom = 87.0
text = "Propagation Speed:"

[node name="HSlider" type="HSlider" parent="CanvasLayer/InfoPanel/VBoxContainer/GridContainer"]
margin_left = 482.0
margin_top = 72.0
margin_right = 960.0
margin_bottom = 88.0
size_flags_horizontal = 3
min_value = 1.0
step = 5.0
value = 10.0
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InfoPanel/VBoxContainer"]
margin_top = 238.0
margin_right = 960.0
margin_bottom = 258.0

[node name="ExitButton" type="Button" parent="CanvasLayer/InfoPanel/VBoxContainer/HBoxContainer"]
margin_right = 478.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "EXIT DEMO"

[node name="OkButton" type="Button" parent="CanvasLayer/InfoPanel/VBoxContainer/HBoxContainer"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "OK"

[connection signal="value_changed" from="CanvasLayer/InfoPanel/VBoxContainer/GridContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="button_down" from="CanvasLayer/InfoPanel/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_button_down"]
[connection signal="button_down" from="CanvasLayer/InfoPanel/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_button_down"]
